gcc/testsuite/rust/rustc/ui/suggestions/path-by-value.rs
use std::path::Path;

fn f(p: Path) { }
// { dg-error ".E0277." "" { target *-*-* } .-1 }

fn main() {}

